Got calling WASM working

--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   },
   "workspaces": [
     "packages/chunk-generator",
-    "packages/config",
-    "packages/cli"
+    "packages/config"
   ]
 }
