--- a/packages/chunk-generator/package.json
+++ b/packages/chunk-generator/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@speakeasy-api/chunk-generator",
   "version": "1.0.0",
-  "main": "index.js",
+  "type": "module",
+  "bin": "./dist/cli/cli.js",
   "scripts": {
     "test": "",
-    "build": "tsc",
+    "build": "tsc && cp -r ./src/generator/wasm/* ./dist/generator/wasm/",
     "dev": "",
     "format": "prettier --config ../../prettier.config.mjs --ignore-path ../../.gitignore --write \"**/*.{js,jsx,mjs,ts,tsx,mts}\"",
     "lint": "eslint \"**/*.{js,jsx,mjs,ts,tsx,mts}\"",
@@ -13,5 +14,13 @@
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "@types/js-yaml": "^4.0.9",
+    "@types/node": "^22.15.17"
+  },
+  "dependencies": {
+    "arg": "^5.0.2",
+    "js-yaml": "^4.1.0"
+  }
 }
