--- a/specs/petstore.yaml
+++ b/specs/petstore.yaml
@@ -11,34 +11,38 @@ paths:
       summary: Get all pets
       operationId: getPets
       responses:
-        '200':
+        "200":
           description: A list of pets
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Pet'
+                  $ref: "#/components/schemas/Pet"
     post:
       summary: Add a new pet
       operationId: addPet
+      tags:
+        - Pet
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Pet'
+              $ref: "#/components/schemas/Pet"
       responses:
-        '201':
+        "201":
           description: Pet added successfully
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Pet'
+                $ref: "#/components/schemas/Pet"
   /pets/{petId}:
     get:
       summary: Get a pet by ID
       operationId: getPetById
+      tags:
+        - Pet
       parameters:
         - name: petId
           in: path
@@ -46,13 +50,13 @@ paths:
           schema:
             type: integer
       responses:
-        '200':
+        "200":
           description: Pet details
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Pet'
-        '404':
+                $ref: "#/components/schemas/Pet"
+        "404":
           description: Pet not found
 components:
   schemas:
