--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,8 +16,10 @@
       "args": [
         "--spec",
         "${workspaceFolder}/../mistral-docs/openapi.yaml",
-        "--out-dir",
-        "${workspaceFolder}/../mistral-docs/docs/api"
+        "-p",
+        "${workspaceFolder}/../mistral-docs/docs/api",
+        "-c",
+        "${workspaceFolder}/../mistral-docs/src/components/speakeasy",
       ]
     }
   ]
