--- a/packages/chunk-generator/package.json
+++ b/packages/chunk-generator/package.json
@@ -16,7 +16,10 @@
   "description": "",
   "devDependencies": {
     "@types/js-yaml": "^4.0.9",
-    "@types/node": "^22.15.17"
+    "@types/mdx": "^2.0.13",
+    "@types/node": "^22.15.17",
+    "@types/react": "^19.1.6",
+    "react": "^19.1.0"
   },
   "dependencies": {
     "arg": "^5.0.2",
