--- a/packages/chunk-generator/tsconfig.json
+++ b/packages/chunk-generator/tsconfig.json
@@ -6,6 +6,7 @@
     "moduleResolution": "node16",
     "rewriteRelativeImportExtensions": true,
     "outDir": "./dist",
+    "jsx": "preserve",
 
     // Unfortunately hono+zod has a compile error on newer versions of TypeScript,
     // so we have to disable checking/loosen checking on our usage of third party
