--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
     {
       "type": "node",
       "request": "launch",
-      "name": "Launch CLI",
+      "name": "Mistral",
       "skipFiles": [
         "<node_internals>/**"
       ],
@@ -20,7 +20,89 @@
         "${workspaceFolder}/../mistral-docs/docs/api",
         "-c",
         "${workspaceFolder}/../mistral-docs/src/components/speakeasy",
+        "-f",
+        "docusaurus"
       ]
-    }
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Redis",
+      "skipFiles": [
+        "<node_internals>/**"
+      ],
+      "program": "${workspaceFolder}/packages/chunk-generator/src/cli/cli.ts",
+      "runtimeArgs": ["--experimental-strip-types"],
+      "args": [
+        "--spec",
+        "${workspaceFolder}/../redis-docs/content/integrate/redis-data-integration/reference/api-reference/openapi.json",
+        "-p",
+        "${workspaceFolder}/../redis-demo-docs/src/app/(api)",
+        "-c",
+        "${workspaceFolder}/../redis-demo-docs/src/components/speakeasy",
+        "-f",
+        "nextra"
+      ]
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Apiture",
+      "skipFiles": [
+        "<node_internals>/**"
+      ],
+      "program": "${workspaceFolder}/packages/chunk-generator/src/cli/cli.ts",
+      "runtimeArgs": ["--experimental-strip-types"],
+      "args": [
+        "--spec",
+        "${workspaceFolder}/../apiture-docs-demo-docusaurus/bankingTransfers_0.18.0.yaml",
+        "-p",
+        "${workspaceFolder}/../apiture-docs-demo-docusaurus/docs/api",
+        "-c",
+        "${workspaceFolder}/../apiture-docs-demo-docusaurus/src/components/speakeasy",
+        "-f",
+        "docusaurus"
+      ]
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Speakeasy (Nextra)",
+      "skipFiles": [
+        "<node_internals>/**"
+      ],
+      "program": "${workspaceFolder}/packages/chunk-generator/src/cli/cli.ts",
+      "runtimeArgs": ["--experimental-strip-types"],
+      "args": [
+        "--spec",
+        "${workspaceFolder}/../speakeasy-registry/openapi_base.yaml",
+        "-p",
+        "${workspaceFolder}/../speakeasy-docs-demo-nextra/src/app/(api)",
+        "-c",
+        "${workspaceFolder}/../speakeasy-docs-demo-nextra/src/components/speakeasy",
+        "-f",
+        "nextra"
+      ]
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Speakeasy (Docusaurus)",
+      "skipFiles": [
+        "<node_internals>/**"
+      ],
+      "program": "${workspaceFolder}/packages/chunk-generator/src/cli/cli.ts",
+      "runtimeArgs": ["--experimental-strip-types"],
+      "args": [
+        "--spec",
+        "${workspaceFolder}/../speakeasy-registry/openapi_base.yaml",
+        "-p",
+        "${workspaceFolder}/../speakeasy-docs-demo-docusaurus/docs/api",
+        "-c",
+        "${workspaceFolder}/../speakeasy-docs-demo-docusaurus/src/components/speakeasy",
+        "-f",
+        "docusaurus"
+      ]
+    },
   ]
 }
