--- a/packages/chunk-generator/package.json
+++ b/packages/chunk-generator/package.json
@@ -23,6 +23,8 @@
   },
   "dependencies": {
     "arg": "^5.0.2",
-    "js-yaml": "^4.1.0"
+    "jotai": "^2.12.5",
+    "js-yaml": "^4.1.0",
+    "motion": "^12.15.0"
   }
 }
