--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,16 +13,7 @@
       ],
       "program": "${workspaceFolder}/packages/chunk-generator/src/cli/cli.ts",
       "runtimeArgs": ["--experimental-strip-types"],
-      "args": [
-        "--spec",
-        "${workspaceFolder}/../mistral-docs/openapi.yaml",
-        "-p",
-        "${workspaceFolder}/../mistral-docs/docs/api",
-        "-c",
-        "${workspaceFolder}/../mistral-docs/src/components/speakeasy",
-        "-f",
-        "docusaurus"
-      ]
+      "cwd": "${workspaceFolder}/../mistral-docs"
     },
     {
       "type": "node",
@@ -33,16 +24,7 @@
       ],
       "program": "${workspaceFolder}/packages/chunk-generator/src/cli/cli.ts",
       "runtimeArgs": ["--experimental-strip-types"],
-      "args": [
-        "--spec",
-        "${workspaceFolder}/../redis-docs/content/integrate/redis-data-integration/reference/api-reference/openapi.json",
-        "-p",
-        "${workspaceFolder}/../redis-demo-docs/src/app/(api)",
-        "-c",
-        "${workspaceFolder}/../redis-demo-docs/src/components/speakeasy",
-        "-f",
-        "nextra"
-      ]
+      "cwd": "${workspaceFolder}/../redis-demo-docs"
     },
     {
       "type": "node",
@@ -53,16 +35,7 @@
       ],
       "program": "${workspaceFolder}/packages/chunk-generator/src/cli/cli.ts",
       "runtimeArgs": ["--experimental-strip-types"],
-      "args": [
-        "--spec",
-        "${workspaceFolder}/../apiture-docs-demo-docusaurus/bankingTransfers_0.18.0.yaml",
-        "-p",
-        "${workspaceFolder}/../apiture-docs-demo-docusaurus/docs/api",
-        "-c",
-        "${workspaceFolder}/../apiture-docs-demo-docusaurus/src/components/speakeasy",
-        "-f",
-        "docusaurus"
-      ]
+      "cwd": "${workspaceFolder}/../apiture-docs-demo-docusaurus"
     },
     {
       "type": "node",
@@ -73,16 +46,7 @@
       ],
       "program": "${workspaceFolder}/packages/chunk-generator/src/cli/cli.ts",
       "runtimeArgs": ["--experimental-strip-types"],
-      "args": [
-        "--spec",
-        "${workspaceFolder}/../speakeasy-registry/openapi_base.yaml",
-        "-p",
-        "${workspaceFolder}/../speakeasy-docs-demo-nextra/src/app/(api)",
-        "-c",
-        "${workspaceFolder}/../speakeasy-docs-demo-nextra/src/components/speakeasy",
-        "-f",
-        "nextra"
-      ]
+      "cwd": "${workspaceFolder}/../speakeasy-docs-demo-nextra"
     },
     {
       "type": "node",
@@ -93,16 +57,7 @@
       ],
       "program": "${workspaceFolder}/packages/chunk-generator/src/cli/cli.ts",
       "runtimeArgs": ["--experimental-strip-types"],
-      "args": [
-        "--spec",
-        "${workspaceFolder}/../speakeasy-registry/openapi_base.yaml",
-        "-p",
-        "${workspaceFolder}/../speakeasy-docs-demo-docusaurus/docs/api",
-        "-c",
-        "${workspaceFolder}/../speakeasy-docs-demo-docusaurus/src/components/speakeasy",
-        "-f",
-        "docusaurus"
-      ]
+      "cwd": "${workspaceFolder}/../speakeasy-docs-demo-docusaurus"
     },
   ]
 }
