--- a/packages/chunk-generator/package.json
+++ b/packages/chunk-generator/package.json
@@ -19,12 +19,14 @@
     "@types/mdx": "^2.0.13",
     "@types/node": "^22.15.17",
     "@types/react": "^19.1.6",
-    "react": "^19.1.0"
+    "react": "^19.1.0",
+    "type-fest": "^4.41.0"
   },
   "dependencies": {
     "arg": "^5.0.2",
     "jotai": "^2.12.5",
     "js-yaml": "^4.1.0",
-    "motion": "^12.15.0"
+    "motion": "^12.15.0",
+    "zod": "^3.25.56"
   }
 }
