--- a/packages/docs-md/package.json
+++ b/packages/docs-md/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "@speakeasy-api/chunk-generator",
-  "version": "1.0.0",
+  "name": "@speakeasy-api/docs-md",
+  "version": "0.1.0-beta1",
   "type": "module",
+  "bin": {
+    "docs-md": "dist/cli/cli.js"
+  },
   "scripts": {
     "test": "",
-    "build": "tsc && cp ./src/generator/docsData/*.gz ./dist/generator/docsData/",
+    "build": "tsc && cp ./src/generator/docsData/*.gz ./dist/generator/docsData/ && chmod a+x dist/cli/cli.js",
     "dev": "",
     "format": "prettier --config ../../prettier.config.mjs --ignore-path ../../.gitignore --write \"**/*.{js,jsx,mjs,ts,tsx,mts}\"",
     "lint": "eslint \"**/*.{js,jsx,mjs,ts,tsx,mts}\"",
