--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "typescript": "^5.8.3"
   },
   "workspaces": [
-    "packages/chunk-generator",
+    "packages/docs-md",
     "packages/config"
   ]
 }
