--- a/packages/docs-md/package.json
+++ b/packages/docs-md/package.json
@@ -26,6 +26,8 @@
     "type-fest": "^4.41.0"
   },
   "dependencies": {
+    "@codesandbox/sandpack-client": "^2.19.8",
+    "@codesandbox/sandpack-react": "^2.20.0",
     "arg": "^5.0.2",
     "jotai": "^2.12.5",
     "js-yaml": "^4.1.0",
