--- a/packages/docs-md/package.json
+++ b/packages/docs-md/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@speakeasy-api/docs-md",
   "private": false,
-  "version": "0.1.0-beta1",
+  "version": "0.1.0-beta2",
   "type": "module",
   "bin": {
     "docs-md": "dist/cli/cli.js"
@@ -13,7 +13,7 @@
     "format": "prettier --config ../../prettier.config.mjs --ignore-path ../../.gitignore --write \"**/*.{js,jsx,mjs,ts,tsx,mts}\"",
     "lint": "eslint \"**/*.{js,jsx,mjs,ts,tsx,mts}\"",
     "start": "",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit --project assets/tsconfig.json && tsc --noEmit"
   },
   "author": "",
   "license": "UNLICENSED",
