--- a/scaffold-templates/docusaurus/package.json
+++ b/scaffold-templates/docusaurus/package.json
@@ -16,6 +16,8 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@codesandbox/sandpack-client": "^2.19.8",
+    "@codesandbox/sandpack-react": "^2.20.0",
     "@docusaurus/core": "3.7.0",
     "@docusaurus/preset-classic": "3.7.0",
     "@mdx-js/react": "^3.0.0",
