--- a/scaffold-templates/nextra/package.json
+++ b/scaffold-templates/nextra/package.json
@@ -13,6 +13,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@codesandbox/sandpack-client": "^2.19.8",
+    "@codesandbox/sandpack-react": "^2.20.0",
     "@radix-ui/colors": "^3.0.0",
     "@speakeasy-api/docs-md": "^0.1.0-beta3",
     "jotai": "^2.12.5",
