Added main entry

--- a/packages/docs-md/package.json
+++ b/packages/docs-md/package.json
@@ -6,6 +6,7 @@
   "bin": {
     "docs-md": "dist/cli/cli.js"
   },
+  "main": "dist/index.js",
   "scripts": {
     "test": "",
     "build": "tsc && cp ./src/generator/docsData/*.gz ./dist/generator/docsData/ && chmod a+x dist/cli/cli.js",
