--- a/packages/docs-md/package.json
+++ b/packages/docs-md/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@speakeasy-api/docs-md",
   "private": false,
-  "version": "0.1.0-beta4",
+  "version": "0.1.0-beta5",
   "type": "module",
   "bin": {
-    "docs-md": "dist/cli/cli.js"
+    "docs-md": "./dist/cli/cli.js"
   },
+  "exports": "./dist/index.js",
   "scripts": {
     "test": "",
     "build": "tsc && cp ./src/generator/docsData/*.gz ./dist/generator/docsData/ && chmod a+x dist/cli/cli.js",
