--- a/packages/docs-md/package.json
+++ b/packages/docs-md/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@speakeasy-api/docs-md",
   "private": false,
-  "version": "0.1.0-beta5",
+  "version": "0.1.0-rc1",
   "type": "module",
   "bin": {
     "docs-md": "./dist/cli/cli.js"
