Foundational work to support custom renderers (#30)
* Got vanilla markdown + hugo rendering working

* Fleshed out Hugo w/o components

* Removed hugo

* Allow TypeScript config files

* Type fixes

* Fixes

--- a/packages/docs-md/package.json
+++ b/packages/docs-md/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@speakeasy-api/docs-md",
   "private": false,
-  "version": "0.1.5",
+  "version": "0.1.6",
   "type": "module",
   "bin": {
     "docs-md": "./dist/cli/cli.js"
   },
   "exports": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "test": "",
     "build": "tsc && cp ./src/pages/data/*.gz ./dist/pages/data/ && chmod a+x dist/cli/cli.js",
