--- a/packages/docs-md/package.json
+++ b/packages/docs-md/package.json
@@ -15,25 +15,34 @@
     "format": "prettier --config ../../prettier.config.mjs --ignore-path ../../.gitignore --write \"**/*.{js,jsx,mjs,ts,tsx,mts}\"",
     "lint": "eslint \"**/*.{js,jsx,mjs,ts,tsx,mts}\"",
     "start": "",
+    "storybook": "storybook dev -p 6006",
     "type-check": "tsc --noEmit"
   },
   "author": "",
   "license": "UNLICENSED",
   "description": "",
-  "devDependencies": {
-    "@types/js-yaml": "^4.0.9",
-    "@types/mdx": "^2.0.13",
-    "@types/node": "^22.15.17",
-    "@types/react": "^19.1.6",
-    "react": "^19.1.0",
-    "type-fest": "^4.41.0"
-  },
   "dependencies": {
     "@codesandbox/sandpack-client": "^2.19.8",
     "@codesandbox/sandpack-react": "^2.20.0",
     "arg": "^5.0.2",
+    "console-feed": "^3.8.0",
     "jotai": "^2.12.5",
     "js-yaml": "^4.1.0",
     "zod": "^3.25.56"
+  },
+  "devDependencies": {
+    "@chromatic-com/storybook": "^4.0.1",
+    "@storybook/addon-a11y": "^9.0.12",
+    "@storybook/addon-docs": "^9.0.12",
+    "@storybook/addon-vitest": "^9.0.12",
+    "@storybook/react": "^9.0.12",
+    "@storybook/react-vite": "^9.0.12",
+    "@types/js-yaml": "^4.0.9",
+    "@types/mdx": "^2.0.13",
+    "@types/node": "^22.15.17",
+    "@types/react": "^19.1.6",
+    "eslint-plugin-storybook": "^9.0.12",
+    "react": "^19.1.0",
+    "storybook": "^9.0.12"
   }
 }
