--- a/packages/docs-md/package.json
+++ b/packages/docs-md/package.json
@@ -26,6 +26,7 @@
     "@codesandbox/sandpack-react": "^2.20.0",
     "arg": "^5.0.2",
     "console-feed": "^3.8.0",
+    "change-case": "^5.4.4",
     "jotai": "^2.12.5",
     "js-yaml": "^4.1.0",
     "zod": "^3.25.56"
