--- a/packages/docs-md/package.json
+++ b/packages/docs-md/package.json
@@ -25,8 +25,8 @@
     "@codesandbox/sandpack-client": "^2.19.8",
     "@codesandbox/sandpack-react": "^2.20.0",
     "arg": "^5.0.2",
-    "console-feed": "^3.8.0",
     "change-case": "^5.4.4",
+    "console-feed": "^3.8.0",
     "jotai": "^2.12.5",
     "js-yaml": "^4.1.0",
     "zod": "^3.25.56"
@@ -43,6 +43,7 @@
     "@types/node": "^22.15.17",
     "@types/react": "^19.1.6",
     "eslint-plugin-storybook": "^9.0.12",
+    "globals": "^16.3.0",
     "react": "^19.1.0",
     "storybook": "^9.0.12"
   }
