--- a/packages/docs-md/package.json
+++ b/packages/docs-md/package.json
@@ -31,6 +31,9 @@
     "js-yaml": "^4.1.0",
     "zod": "^3.25.56"
   },
+  "peerDependencies": {
+    "@docusaurus/theme-common": "^3.0.0"
+  },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.0.1",
     "@storybook/addon-a11y": "^9.0.12",
@@ -45,6 +48,7 @@
     "eslint-plugin-storybook": "^9.0.12",
     "globals": "^16.3.0",
     "react": "^19.1.0",
-    "storybook": "^9.0.12"
+    "storybook": "^9.0.12",
+    "type-fest": "^4.41.0"
   }
 }
