--- a/packages/docs-md/package.json
+++ b/packages/docs-md/package.json
@@ -6,7 +6,16 @@
   "bin": {
     "docs-md": "dist/cli/cli.js"
   },
-  "exports": "./dist/index.js",
+  "exports": {
+    "./docusaurus": {
+      "types": "./dist/docusaurus.d.ts",
+      "default": "./dist/docusaurus.js"
+    },
+    "./nextra": {
+      "types": "./dist/nextra.d.ts",
+      "default": "./dist/nextra.js"
+    }
+  },
   "types": "./dist/index.d.ts",
   "scripts": {
     "test": "",
@@ -26,6 +35,7 @@
     "@codesandbox/sandpack-react": "^2.20.0",
     "arg": "^5.0.2",
     "change-case": "^5.4.4",
+    "clsx": "^2.1.1",
     "console-feed": "^3.8.0",
     "jotai": "^2.12.5",
     "js-yaml": "^4.1.0",
