--- a/scaffold-templates/nextra/package.json
+++ b/scaffold-templates/nextra/package.json
@@ -16,7 +16,7 @@
     "@codesandbox/sandpack-client": "^2.19.8",
     "@codesandbox/sandpack-react": "^2.20.0",
     "@radix-ui/colors": "^3.0.0",
-    "@speakeasy-api/docs-md": "^0.1.0-beta3",
+    "@speakeasy-api/docs-md": "^0.1.10",
     "jotai": "^2.12.5",
     "motion": "^12.17.0",
     "next": "^15.3.1",
