--- a/packages/docs-md/package.json
+++ b/packages/docs-md/package.json
@@ -43,7 +43,8 @@
     "zod": "^3.25.56"
   },
   "peerDependencies": {
-    "@docusaurus/theme-common": "^3.0.0"
+    "@docusaurus/theme-common": "^3.0.0",
+    "next-themes": "^0.4.6"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.0.1",
@@ -58,7 +59,13 @@
     "@types/react": "^19.1.6",
     "eslint-plugin-storybook": "^9.0.12",
     "globals": "^16.3.0",
+    "next": "^15.3.5",
+    "next-themes": "^0.4.6",
+    "nextra": "^4.2.17",
+    "nextra-theme-docs": "^4.2.17",
     "react": "^19.1.0",
+    "rehype-pretty-code": "^0.14.1",
+    "shiki": "^3.7.0",
     "storybook": "^9.0.12",
     "type-fest": "^4.41.0"
   }
