Brought examples into the repo (#46)
* Brought examples into the repo

* Rebuilt docs

* Generated files

* Maybe this?

* Simplify

* Upgrade Node

* Removed CI for now

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.DS_Store
+
 # Logs
 logs
 *.log
@@ -86,11 +88,13 @@ web_modules/
 # Next.js build output
 .next
 out
+**/_pagefind/
 
 # Nuxt.js build / generate output
 .nuxt
 dist
 docs-dist
+build
 
 # Gatsby files
 .cache/
