--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "workspaces": [
     "packages/docs-md",
-    "packages/config"
+    "packages/config",
+    "examples/docusaurus",
+    "examples/nextra"
   ]
 }
