--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,13 @@
+# LFS files
 *.wasm filter=lfs diff=lfs merge=lfs -text
 *.gz filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
 *.svg filter=lfs diff=lfs merge=lfs -text
+*.jpg filter=lfs diff=lfs merge=lfs -text
+*.jpeg filter=lfs diff=lfs merge=lfs -text
 *.avif filter=lfs diff=lfs merge=lfs -text
+*.webp filter=lfs diff=lfs merge=lfs -text
+
+# Generated API documentation files
+examples/docusaurus/docs/api/** linguist-generated=true
+examples/nextra/src/app/api/** linguist-generated=true
