--- a/packages/docs-md/package.json
+++ b/packages/docs-md/package.json
@@ -67,6 +67,7 @@
     "rehype-pretty-code": "^0.14.1",
     "shiki": "^3.7.0",
     "storybook": "^9.0.12",
-    "type-fest": "^4.41.0"
+    "type-fest": "^4.41.0",
+    "typescript": "^5.8.3"
   }
 }
