--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -29,35 +29,24 @@
     {
       "type": "node",
       "request": "launch",
-      "name": "Apiture",
+      "name": "Petstore (Nextra)",
       "skipFiles": [
         "<node_internals>/**"
       ],
       "program": "${workspaceFolder}/packages/docs-md/src/cli/cli.ts",
       "runtimeArgs": ["--experimental-strip-types"],
-      "cwd": "${workspaceFolder}/../apiture-docs-demo-docusaurus"
+      "cwd": "${workspaceFolder}/examples/nextra/petstore"
     },
     {
       "type": "node",
       "request": "launch",
-      "name": "Speakeasy (Nextra)",
+      "name": "Petstore (Docusaurus)",
       "skipFiles": [
         "<node_internals>/**"
       ],
       "program": "${workspaceFolder}/packages/docs-md/src/cli/cli.ts",
       "runtimeArgs": ["--experimental-strip-types"],
-      "cwd": "${workspaceFolder}/../speakeasy-docs-demo-nextra"
-    },
-    {
-      "type": "node",
-      "request": "launch",
-      "name": "Speakeasy (Docusaurus)",
-      "skipFiles": [
-        "<node_internals>/**"
-      ],
-      "program": "${workspaceFolder}/packages/docs-md/src/cli/cli.ts",
-      "runtimeArgs": ["--experimental-strip-types"],
-      "cwd": "${workspaceFolder}/../speakeasy-docs-demo-docusaurus"
+      "cwd": "${workspaceFolder}/examples/docusaurus/petstore"
     },
   ]
 }
