--- a/.github/workflows/docs-md.yaml
+++ b/.github/workflows/docs-md.yaml
@@ -17,18 +17,27 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "24"
+          node-version: "22"
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9
+      - name: Get pnpm store directory
+        shell: bash
+        run: |
+          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+      - name: Setup pnpm cache
+        uses: actions/cache@v4
+        with:
+          path: ${{ env.STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install --frozen-lockfile
       - name: Lint
         working-directory: ./packages/docs-md
-        run: npm run lint
-      - name: Type check
-        working-directory: ./packages/docs-md
-        run: npm run type-check
-      - name: Test
-        working-directory: ./packages/docs-md
-        run: npm run test
+        run: pnpm run lint
       - name: Build
         working-directory: ./packages/docs-md
-        run: npm run build
+        run: pnpm run build
