--- a/examples/nextra/petstore/package.json
+++ b/examples/nextra/petstore/package.json
@@ -14,6 +14,7 @@
   "description": "",
   "dependencies": {
     "@radix-ui/colors": "^3.0.0",
+    "@speakeasy-api/docs-md": "workspace:*",
     "jotai": "^2.12.5",
     "motion": "^12.16.0",
     "next": "^15.3.1",
