--- a/packages/docs-md/package.json
+++ b/packages/docs-md/package.json
@@ -48,6 +48,7 @@
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.0.1",
+    "@speakeasy-api/config": "workspace:*",
     "@storybook/addon-a11y": "^9.0.12",
     "@storybook/addon-docs": "^9.0.12",
     "@storybook/addon-vitest": "^9.0.12",
