--- a/.github/workflows/docusaurus-example.yaml
+++ b/.github/workflows/docusaurus-example.yaml
@@ -1,4 +1,4 @@
-name: Docusaurus Petstore Example
+name: Docusaurus Example
 
 on:
   push:
@@ -9,7 +9,7 @@ on:
 
 jobs:
   build-and-test:
-    name: Docusaurus Petstore Example Build and Test
+    name: Docusaurus Example Build
     runs-on: ubuntu-latest
 
     steps:
@@ -17,16 +17,12 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "22"
-      - name: Install pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          version: 9
+          node-version: "24"
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: npm ci
       - name: Build Docs MD
         working-directory: ./packages/docs-md
-        run: pnpm run build
+        run: npm run build
       - name: Build Docusaurus
         working-directory: ./examples/docusaurus/petstore
-        run: pnpm run build
+        run: npm run build
