--- a/package.json
+++ b/package.json
@@ -9,5 +9,11 @@
     "eslint": "^9.26.0",
     "prettier": "^3.5.3",
     "typescript": "^5.8.3"
-  }
+  },
+  "workspaces": [
+    "packages/docs-md",
+    "packages/config",
+    "examples/docusaurus/petstore",
+    "examples/nextra/petstore"
+  ]
 }
