--- a/packages/docs-md/package.json
+++ b/packages/docs-md/package.json
@@ -50,6 +50,7 @@
     "cpx": "^1.5.0",
     "jotai": "^2.12.5",
     "js-yaml": "^4.1.0",
+    "lucide-react": "^0.525.0",
     "react-use-measure": "^2.1.7",
     "zod": "^3.25.56"
   },
