--- a/.gitattributes
+++ b/.gitattributes
@@ -9,5 +9,5 @@
 *.webp filter=lfs diff=lfs merge=lfs -text
 
 # Generated API documentation files
-examples/docusaurus/docs/api/** linguist-generated=true
-examples/nextra/src/app/api/** linguist-generated=true
+examples/**/*.mdx linguist-generated=true
+
