--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -70,5 +70,17 @@
       "runtimeArgs": ["--experimental-strip-types"],
       "cwd": "${workspaceFolder}/../redis-demo-docs"
     },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Castle",
+      "skipFiles": [
+        "<node_internals>/**"
+      ],
+      "program": "${workspaceFolder}/packages/docs-md/src/compiler/cli/cli.ts",
+      "runtimeArgs": ["--experimental-strip-types"],
+      "cwd": "${workspaceFolder}/../castle-docs-demo"
+
+    }
   ]
 }
