--- a/packages/docs-md/package.json
+++ b/packages/docs-md/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@speakeasy-api/docs-md",
   "private": false,
-  "version": "0.1.20",
+  "version": "0.1.21",
   "type": "module",
   "bin": {
     "docs-md": "dist/compiler/cli/cli.js"
@@ -24,12 +24,16 @@
     "./react": {
       "types": "./dist/runtime/react.d.ts",
       "default": "./dist/runtime/react.js"
+    },
+    "./compiler": {
+      "types": "./dist/compiler/compiler.d.ts",
+      "default": "./dist/compiler/compiler.js"
     }
   },
   "types": "./dist/index.d.ts",
   "scripts": {
     "test": "",
-    "build": "tsc && cp ./src/compiler/data/*.gz ./dist/compiler/data/ && chmod a+x dist/compiler/cli/cli.js && cpx \"src/**/*.css\" dist/",
+    "build": "rm -rf dist && tsc && cp ./src/compiler/data/*.gz ./dist/compiler/data/ && chmod a+x dist/compiler/cli/cli.js && cpx \"src/**/*.css\" dist/",
     "dev": "",
     "format": "prettier --config ../../prettier.config.mjs --ignore-path ../../.gitignore --write \"**/*.{js,jsx,mjs,ts,tsx,mts}\"",
     "lint": "eslint \"**/*.{js,jsx,mjs,ts,tsx,mts}\"",
@@ -45,6 +49,7 @@
     "@codesandbox/sandpack-react": "^2.20.0",
     "arg": "^5.0.2",
     "change-case": "^5.4.4",
+    "chalk": "^5.3.0",
     "clsx": "^2.1.1",
     "console-feed": "^3.8.0",
     "cpx": "^1.5.0",
