--- a/packages/docs-md/package.json
+++ b/packages/docs-md/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@speakeasy-api/docs-md",
   "private": false,
-  "version": "0.1.23",
+  "version": "0.1.24",
   "type": "module",
   "bin": {
     "docs-md": "dist/compiler/cli/cli.js"
@@ -33,7 +33,8 @@
   "types": "./dist/index.d.ts",
   "scripts": {
     "test": "",
-    "build": "rm -rf dist && tsc && cp ./src/compiler/data/*.gz ./dist/compiler/data/ && chmod a+x dist/compiler/cli/cli.js && cpx \"src/**/*.css\" dist/",
+    "clean": "rm -rf dist",
+    "build": "tsc && cp ./src/compiler/data/*.gz ./dist/compiler/data/ && chmod a+x dist/compiler/cli/cli.js && cpx \"src/**/*.css\" dist/",
     "dev": "",
     "format": "prettier --config ../../prettier.config.mjs --ignore-path ../../.gitignore --write \"**/*.{js,jsx,mjs,ts,tsx,mts}\"",
     "lint": "eslint \"**/*.{js,jsx,mjs,ts,tsx,mts}\"",
