--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "examples/docusaurus/pokeapi",
     "examples/docusaurus/mistral",
     "examples/nextra/pokeapi",
-    "examples/nextra/mistral"
+    "examples/nextra/mistral",
+    "examples/custom/mistral"
   ]
 }
