Non ts code samples (#73)
* Wired up configuration for multiple languages in try it now

* First draft of tabbed code samples

* Got it working

* Cleaned up code

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,6 +13,7 @@
       ],
       "program": "${workspaceFolder}/packages/docs-md/src/compiler/cli/cli.ts",
       "runtimeArgs": ["--experimental-strip-types"],
+      "args": ["--verbose"],
       "cwd": "${workspaceFolder}/examples/docusaurus/mistral"
     },
     {
@@ -24,6 +25,7 @@
       ],
       "program": "${workspaceFolder}/packages/docs-md/src/compiler/cli/cli.ts",
       "runtimeArgs": ["--experimental-strip-types"],
+      "args": ["--verbose"],
       "cwd": "${workspaceFolder}/examples/docusaurus/pokeapi"
     },
     {
@@ -35,6 +37,7 @@
       ],
       "program": "${workspaceFolder}/packages/docs-md/src/compiler/cli/cli.ts",
       "runtimeArgs": ["--experimental-strip-types"],
+      "args": ["--verbose"],
       "cwd": "${workspaceFolder}/examples/nextra/mistral"
     },
     {
@@ -46,6 +49,7 @@
       ],
       "program": "${workspaceFolder}/packages/docs-md/src/compiler/cli/cli.ts",
       "runtimeArgs": ["--experimental-strip-types"],
+      "args": ["--verbose"],
       "cwd": "${workspaceFolder}/examples/nextra/pokeapi"
     },
     {
@@ -57,6 +61,7 @@
       ],
       "program": "${workspaceFolder}/packages/docs-md/src/compiler/cli/cli.ts",
       "runtimeArgs": ["--experimental-strip-types"],
+      "args": ["--verbose"],
       "cwd": "${workspaceFolder}/../mistral-docs"
     },
     {
@@ -68,6 +73,7 @@
       ],
       "program": "${workspaceFolder}/packages/docs-md/src/compiler/cli/cli.ts",
       "runtimeArgs": ["--experimental-strip-types"],
+      "args": ["--verbose"],
       "cwd": "${workspaceFolder}/../redis-demo-docs"
     },
     {
@@ -79,8 +85,8 @@
       ],
       "program": "${workspaceFolder}/packages/docs-md/src/compiler/cli/cli.ts",
       "runtimeArgs": ["--experimental-strip-types"],
+      "args": ["--verbose"],
       "cwd": "${workspaceFolder}/../castle-docs-demo"
-
     }
   ]
 }
