Normalized slot architecture (#76)
* Renamed operation front-matter

* Split apart operation front-matter

* First draft of split property frontmatter

* Split schema frontmatter into components

* Split breakout frontmatter into components

* Split remaining components into slots

* Style fixes

* Rebuilt examples

* Don't render empty sections

* Rebuilt examples

* Missed two

* Another one

* More optional callbacks

* Normalized missing slots

--- a/packages/docs-md/package.json
+++ b/packages/docs-md/package.json
@@ -32,7 +32,8 @@
     "lint": "eslint \"**/*.{js,jsx,mjs,ts,tsx,mts}\"",
     "start": "",
     "storybook": "storybook dev -p 6006",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "build-api-docs": ""
   },
   "author": "",
   "license": "UNLICENSED",
