Add node types to top-level (#79)
* Add node types to top-level

* Kick Vercel

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "url": "git+https://github.com/speakeasy-api/docs.git"
   },
   "devDependencies": {
+    "@types/node": "^24.3.1",
     "cross-dirname": "^0.1.0",
     "eslint": "^9.26.0",
     "prettier": "^3.5.3",
