--- a/.github/workflows/examples.yaml
+++ b/.github/workflows/examples.yaml
@@ -1,4 +1,4 @@
-name: Docs MD
+name: Example Builds
 
 on:
   push:
@@ -9,29 +9,25 @@ on:
 
 jobs:
   build-and-test:
-    name: Docs MD Build and Test
+    name: Example Build and Test
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
         with:
-          # Needed to copy the WASM file during build
+          # Needed to copy the WASM file during Docs MD build
           lfs: true
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: "24"
       - name: Install dependencies
-        run: npm ci
-      - name: Lint
-        working-directory: ./packages/docs-md
-        run: npm run lint
-      - name: Type check
-        working-directory: ./packages/docs-md
-        run: npm run type-check
-      - name: Test
-        working-directory: ./packages/docs-md
-        run: npm run test
-      - name: Build
+        run: npm ci && npm install --workspaces
+      - name: Build Docs MD
         working-directory: ./packages/docs-md
         run: npm run build
+      # We have to run npm install again to link the newly built docs-md binary
+      - name: Link workspace binaries
+        run: npm install --workspaces
+      - name: Verify example builds
+        run: make verify-api-docs
