--- a/examples/docusaurus/pokeapi/package.json
+++ b/examples/docusaurus/pokeapi/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "docs-docusaurus-playground",
+  "name": "poekapi-docusaurus",
   "version": "0.0.0",
   "private": true,
   "scripts": {
