Updated publish script to be multi-package (#84)

--- a/examples/docusaurus/mistral/package.json
+++ b/examples/docusaurus/mistral/package.json
@@ -7,6 +7,7 @@
     "dev": "rm -rf .docusaurus node_modules/.cache && docusaurus start --no-open -p 3003",
     "start": "http-server build",
     "build-api-docs": "docs-md",
+    "clean": "rm -rf .docusaurus node_modules/.cache build",
     "prebuild": "cd ../../../ && make build-packages",
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
@@ -19,16 +20,16 @@
   "dependencies": {
     "@codesandbox/sandpack-client": "^2.19.8",
     "@codesandbox/sandpack-react": "^2.20.0",
-    "@docusaurus/core": "3.7.0",
-    "@docusaurus/preset-classic": "3.7.0",
+    "@docusaurus/core": "^3.7.0",
+    "@docusaurus/preset-classic": "^3.7.0",
     "@speakeasy-api/docs-md": "*",
     "@speakeasy-api/docs-md-react": "*",
     "http-server": "^14.1.1"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "3.7.0",
-    "@docusaurus/tsconfig": "3.7.0",
-    "@docusaurus/types": "3.7.0"
+    "@docusaurus/module-type-aliases": "^3.7.0",
+    "@docusaurus/tsconfig": "^3.7.0",
+    "@docusaurus/types": "^3.7.0"
   },
   "browserslist": {
     "production": [
