--- a/examples/docusaurus/pokeapi/package.json
+++ b/examples/docusaurus/pokeapi/package.json
@@ -7,6 +7,7 @@
     "dev": "rm -rf .docusaurus node_modules/.cache && docusaurus start --no-open -p 3001",
     "start": "http-server build",
     "build-api-docs": "docs-md",
+    "clean": "rm -rf .docusaurus node_modules/.cache build",
     "prebuild": "cd ../../../ && make build-packages",
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
@@ -17,8 +18,8 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@docusaurus/core": "3.7.0",
-    "@docusaurus/preset-classic": "3.7.0",
+    "@docusaurus/core": "^3.7.0",
+    "@docusaurus/preset-classic": "^3.7.0",
     "@docusaurus/theme-common": "^3.8.1",
     "@mdx-js/react": "^3.0.0",
     "@radix-ui/colors": "^3.0.0",
@@ -34,9 +35,9 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "3.7.0",
-    "@docusaurus/tsconfig": "3.7.0",
-    "@docusaurus/types": "3.7.0",
+    "@docusaurus/module-type-aliases": "^3.7.0",
+    "@docusaurus/tsconfig": "^3.7.0",
+    "@docusaurus/types": "^3.7.0",
     "typescript": "^5.8.3"
   },
   "browserslist": {
