--- a/examples/nextra/mistral/package.json
+++ b/examples/nextra/mistral/package.json
@@ -6,6 +6,7 @@
     "dev": "rm -rf .next && next -p 3004",
     "build-api-docs": "docs-md",
     "prebuild": "cd ../../../ && make build-packages",
+    "clean": "rm -rf .next node_modules/.cache out",
     "build": "next build",
     "postbuild": "pagefind --site .next/server/app --output-path out/_pagefind",
     "start": "http-server out"
