--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -31,6 +31,7 @@
     "typescript-eslint": "^8.26.1"
   },
   "scripts": {
+    "clean": "",
     "build": "",
     "prettier": "prettier --config ../../prettier.config.mjs --ignore-path ../../.gitignore \"**/*.{js,jsx,mjs,ts,tsx,mts}\"",
     "format": "npm run prettier -- --write",
