--- a/examples/custom/pokeapi/package.json
+++ b/examples/custom/pokeapi/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev -p 3006",
     "build-api-docs": "docs-md",
     "prebuild": "cd ../../../ && make build-packages",
+    "clean": "rm -rf .next node_modules/.cache out",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
