--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@speakeasy-api/docs-md",
-  "version": "0.2.3",
+  "version": "0.2.4",
   "author": "",
   "license": "UNLICENSED",
   "description": "",
@@ -15,6 +15,10 @@
     }
   },
   "types": "./dist/compiler.d.ts",
+  "files": [
+    "dist/**/*",
+    "README.md"
+  ],
   "scripts": {
     "clean": "rm -rf dist",
     "build": "tsc && cp ./src/data/*.gz ./dist/data/ && chmod a+x dist/cli/cli.js && cpx \"src/**/*.css\" dist/",
