--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@speakeasy-api/docs-md-react",
-  "version": "0.2.3",
+  "version": "0.2.4",
   "author": "",
   "license": "UNLICENSED",
   "description": "",
@@ -18,6 +18,10 @@
     }
   },
   "types": "./dist/index.d.ts",
+  "files": [
+    "dist/**/*",
+    "README.md"
+  ],
   "scripts": {
     "clean": "rm -rf dist",
     "build": "tsc && cpx \"src/**/*.css\" dist/",
