--- a/scaffold-templates/docusaurus/package.json
+++ b/scaffold-templates/docusaurus/package.json
@@ -22,7 +22,8 @@
     "@docusaurus/preset-classic": "^3.7.0",
     "@mdx-js/react": "^3.0.0",
     "@radix-ui/colors": "^3.0.0",
-    "@speakeasy-api/docs-md": "^0.1.27",
+    "@speakeasy-api/docs-md": "^0.2.4",
+    "@speakeasy-api/docs-md-react": "^0.2.4",
     "clsx": "^2.0.0",
     "http-server": "^14.1.1",
     "jotai": "^2.12.5",
