--- a/scaffold-templates/nextra/package.json
+++ b/scaffold-templates/nextra/package.json
@@ -16,7 +16,8 @@
     "@codesandbox/sandpack-client": "^2.19.8",
     "@codesandbox/sandpack-react": "^2.20.0",
     "@radix-ui/colors": "^3.0.0",
-    "@speakeasy-api/docs-md": "^0.1.27",
+    "@speakeasy-api/docs-md": "^0.2.4",
+    "@speakeasy-api/docs-md-react": "^0.2.4",
     "jotai": "^2.12.5",
     "motion": "^12.17.0",
     "next": "^15.3.1",
