Repo sync test (#90)
* Repo sync test

* new var name

* Testing

* Remove remote first

* Different URL

* Debug remote

* Add username

* Different auth approach

* Vanilla git approach

* Single step

* Status

* Wired CLIs together

* Better wire

* Created README

* Use classic PAT

* Split out remote add

* More logging

* More testing

* Fix typo

* next

* Somehow it's git subtree related

* Hopefully this does it

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "dependencies": {
     "@codesandbox/sandpack-client": "^2.19.8",
     "@codesandbox/sandpack-react": "^2.20.0",
-    "@speakeasy-api/docs-md-shared": "*",
+    "@speakeasy-api/docs-md-shared": "^0.2.4",
     "clsx": "^2.1.1",
     "console-feed": "^3.8.0",
     "react-use-measure": "^2.1.7"
