--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -35,7 +35,7 @@
   "dependencies": {
     "@codesandbox/sandpack-client": "^2.19.8",
     "@codesandbox/sandpack-react": "^2.20.0",
-    "@speakeasy-api/docs-md-shared": "*",
+    "@speakeasy-api/docs-md-shared": "^0.2.4",
     "clsx": "^2.1.1",
     "console-feed": "^3.8.0",
     "react-use-measure": "^2.1.7"
