Open source react (#92)
* Set site info in package.json

* Documented a lot more components

* MIT license

* Better handling of component import check

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@speakeasy-api/docs-md-react",
   "version": "0.2.4",
   "author": "",
-  "license": "UNLICENSED",
+  "license": "MIT",
   "description": "",
   "type": "module",
   "exports": {
@@ -22,6 +22,11 @@
     "dist/**/*",
     "README.md"
   ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/speakeasy-api/docs-md-react.git"
+  },
+  "homepage": "https://www.speakeasy.com/product/api-docs",
   "scripts": {
     "clean": "rm -rf dist",
     "build": "tsc && cpx \"src/**/*.css\" dist/",
