Implemented support for top-level examples (#93)
* Implemented support for top-level examples

* Lint fix

--- a/examples/specs/pokeapi.yml
+++ b/examples/specs/pokeapi.yml
@@ -2355,6 +2355,18 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/PokemonDetail'
+              examples:
+                pokemonDetail:
+                  value: {
+                    "id": 1,
+                    "name": "Rambo",
+                    "base_experience": 64,
+                    "height": 7,
+                    "is_legendary": false,
+                    "is_mythical": false,
+                    "order": 1,
+                    "weight": 60
+                  }
           description: ''
   /api/v2/pokemon-color/:
     get:
