--- a/.github/workflows/packages.yaml
+++ b/.github/workflows/packages.yaml
@@ -31,3 +31,5 @@ jobs:
         run: make lint-packages
       - name: Check formatting
         run: make check-formatting-packages
+      - name: Verify package versions
+        run: make verify-package-versions
