--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@speakeasy-api/docs-md",
-  "version": "0.2.7",
+  "version": "0.2.8",
   "author": "",
   "license": "UNLICENSED",
   "description": "",
@@ -12,6 +12,10 @@
     ".": {
       "types": "./dist/compiler.d.ts",
       "default": "./dist/compiler.js"
+    },
+    "./editor": {
+      "types": "./dist/editor.d.ts",
+      "default": "./dist/editor.js"
     }
   },
   "types": "./dist/compiler.d.ts",
@@ -29,8 +33,8 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@speakeasy-api/docs-md-react": "*",
-    "@speakeasy-api/docs-md-shared": "*",
+    "@speakeasy-api/docs-md-react": "0.2.8",
+    "@speakeasy-api/docs-md-shared": "0.2.8",
     "arg": "^5.0.2",
     "chalk": "^5.3.0",
     "change-case": "^5.4.4",
