--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@speakeasy-api/docs-md-shared": "0.2.9",
     "clsx": "^2.1.1",
     "console-feed": "^3.8.0",
+    "jotai": "^2.14.0",
     "react-use-measure": "^2.1.7"
   },
   "devDependencies": {
