Proper req res slots (#116)
* Enabled syntax highlighting for top-level examples

* rebuilt examples

* Removed 'Code Samples' heading prefix

* Upgraded components

* Moved request examples

* Request examples tweak

* Code cleanup

* Got response examples separated

--- a/examples/specs/mistral.yaml
+++ b/examples/specs/mistral.yaml
@@ -103,6 +103,9 @@ paths:
           application/json:
             schema:
               $ref: "#/components/schemas/ConversationRequest"
+            examples:
+              conversation_request:
+                value: { "model": "mistral", "messages": [] }
       responses:
         "200":
           description: Successful Response
