--- a/package.json
+++ b/package.json
@@ -34,16 +34,16 @@
     "format": "npm run prettier -- --write",
     "check-formatting": "npm run prettier -- --check",
     "lint": "eslint \"**/*.{js,jsx,mjs,ts,tsx,mts}\"",
-    "storybook": "storybook dev -p 6006",
+    "storybook": "storybook dev -p 6006 --config-dir ./src/.storybook",
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@codesandbox/sandpack-client": "^2.19.8",
-    "@codesandbox/sandpack-react": "^2.20.0",
+    "@monaco-editor/react": "^4.7.0",
     "@speakeasy-api/docs-md-shared": "0.2.23",
     "clsx": "^2.1.1",
     "console-feed": "^3.8.0",
     "jotai": "^2.14.0",
+    "monaco-editor": "^0.53.0",
     "react-use-measure": "^2.1.7"
   },
   "devDependencies": {
