feat: add results view to TryItNow (#129)
* New Try It Now Scaffold (#105)

* feat: add new editor UI (#118)

* feat: add monaco editor as editor for tryitnow

* update style and add more in-depth story wrapper

* disable line numbers

* add basic backup styling if none is defined

* add basic version of new layout

* add basic theming support

* remove hover class

* some a11y fixes

* mark theme as optional

* add extensions to imports

* mark other type as optional

* fix css tokens

* linting errors

* fix remaining linting errors

* formatting

* proto-type results pane

* add basic loading screen

* add some padding

* remove useCallback

* fight with types

* Got output working

* removed unused props

* Rebuilt package-lock

* package-lock fix

---------

Co-authored-by: Bryan Hughes <bryan.hughes@speakeasy.com>

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "scripts": {
     "clean": "rm -rf dist",
     "build": "tsc && cpx \"src/**/*.css\" dist/",
+    "build:watch": "tsc --watch & cpx \"src/**/*.css\" dist/ --watch",
     "prettier": "prettier --config ../../prettier.config.mjs --ignore-path ../../.gitignore \"**/*.{js,jsx,mjs,ts,tsx,mts}\"",
     "format": "npm run prettier -- --write",
     "check-formatting": "npm run prettier -- --check",
