--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -30,6 +30,7 @@
   "scripts": {
     "clean": "rm -rf dist",
     "build": "tsc && cpx \"src/**/*.css\" dist/",
+    "build:watch": "tsc --watch & cpx \"src/**/*.css\" dist/ --watch",
     "prettier": "prettier --config ../../prettier.config.mjs --ignore-path ../../.gitignore \"**/*.{js,jsx,mjs,ts,tsx,mts}\"",
     "format": "npm run prettier -- --write",
     "check-formatting": "npm run prettier -- --check",
