--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@speakeasy-api/docs-md-shared",
-  "version": "0.2.24",
+  "version": "0.2.25",
   "author": "",
   "license": "UNLICENSED",
   "description": "",
@@ -14,6 +14,11 @@
     }
   },
   "type": "module",
+  "files": [
+    "dist",
+    "config",
+    "README.md"
+  ],
   "//": "The version of esbuild-wasm is pinned to ensure compatibility with the version used in the browser. If you change the version here, change it in src/codeRuntime/build.ts",
   "dependencies": {
     "@eslint/compat": "^1.2.7",
@@ -31,7 +36,8 @@
     "globals": "^16.0.0",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "typescript-eslint": "^8.26.1"
+    "typescript-eslint": "^8.26.1",
+    "util": "^0.12.5"
   },
   "scripts": {
     "clean": "",
