Better sample download (#135)
* First draft of new sample download approach

* First working version

* Fixed some handle leaks

* Rebuilt docs

* Lint fixes

--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -40,6 +40,7 @@
     "change-case": "^5.4.4",
     "cpx2": "^8.0.0",
     "js-yaml": "^4.1.0",
+    "tar": "^7.5.1",
     "zod": "^3.25.56"
   },
   "devDependencies": {
