--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -33,6 +33,7 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@microsoft/api-extractor": "^7.52.15",
     "@speakeasy-api/docs-md-react": "0.2.28",
     "@speakeasy-api/docs-md-shared": "0.2.28",
     "arg": "^5.0.2",
