feat: Add JSON object views to TryItNow results (#143)
* add json tree viewer

* update colors

* change formatting

* fix colors in docusaurus

* formatting and fix typo

* create stable id's for events

* formatting

* move runtime message ids to state.ts

* linting

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "clsx": "^2.1.1",
     "jotai": "^2.14.0",
     "monaco-editor": "^0.53.0",
+    "react-json-tree": "^0.20.0",
     "react-use-measure": "^2.1.7"
   },
   "devDependencies": {
