--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -44,6 +44,7 @@
     "clsx": "^2.1.1",
     "jotai": "^2.14.0",
     "monaco-editor": "^0.53.0",
+    "react-json-tree": "^0.20.0",
     "react-use-measure": "^2.1.7"
   },
   "devDependencies": {
